crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__base_parse-2.snap
---
source: crates/compiler/tests/parser_test/mod.rs
assertion_line: 21
expression: "<p></p>"
---
children:
  - Element:
      tag_name: p
      tag_type: Plain
      namespace: Html
      properties: []
      children: []
      location:
        start: "Pos: 0, Ln: 1, Col: 1"
        end: "Pos: 7, Ln: 1, Col: 8"
location:
  start: "Pos: 0, Ln: 1, Col: 1"
  end: "Pos: 7, Ln: 1, Col: 8"

