crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__bind_dir-3.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p :^_^.prop=\"tt\"/>"

---
Dir:
  name: bind
  argument:
    Static: ^_^
  modifiers:
    - prop
  expression:
    content: tt
    location:
      start: "Pos: 13, Ln: 1, Col: 14"
      end: "Pos: 17, Ln: 1, Col: 18"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 12, Ln: 1, Col: 13"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 17, Ln: 1, Col: 18"

